Fixed Index Page

--- a/index.html
+++ b/index.html
@@ -4,37 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Task Scheduler</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Authentication Page</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <div id="container">
-        <div class="navigation">
-            <div class="heading">Tasks List</div>
-            <div class="heading owner">Owner - Aryan</div>
-        </div>
-        <img src="logo.png" alt="Logo" id="logo">
-        <div id="rightNavigation">
-            <img id="logout" src="images/logout.png" alt="Logout" width="30px">
-            <div id="dateTime"></div>
-        </div>
-        <ul id="list">
-            <li> Satellite UI building</li>
-            <li> NLP Research</li>
-            <li> Google Solution Challenge</li>
-            <li> Virtual Scavengers</li>
-            <li> Google Hashcode</li>
-            <li> DSA series</li>
-            <li> KickStart</li>
-            <li> CodeChef</li>
-        </ul>
-        <button id="add">Add Task</button>    
+            <h1>Welcome!</h1>
+            <div id="wrapper">
+                <input id="username" type="text" placeholder="Enter Username" required>
+                <input id="password" type="password" placeholder="Enter Password" required>
+                <button id="submit">Login!</button>
+            </div>
     </div>
-    <div id="takeInput">
-        <div>
-            <input id="inputBox" type="text" placeholder="Enter Task">
-        </div>
-    </div>
-    <script src="script.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
